--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,7 +127,16 @@ html {
   scroll-behavior: smooth;
   font-size: 85%;
 
-  @media only screen and (min-width: 1366px) {
+  @media only screen and (min-width: 1400px) {
     font-size: 100%;
+  }
+}
+
+.container {
+  max-width: 100vw;
+
+  @media only screen and (min-width: 1400px) {
+    max-width: 1440px;
+    margin: 0 auto;
   }
 }
